# Netchat

./: .gitignore  Cargo.toml  README.md  kill.sh  launch-network.sh  launch.py  netchat.sh
src/: kill.sh  main.rs
src/app/: events.rs  mod.rs
src/server/: events.rs  messages.rs  mod.rs
src/utils/: event.rs  events.rs  messages.rs  mod.rs
