[package]
name = "project"
version = "0.1.0"
authors = ["efugier <mail@emilienfugier.net>"]
edition = "2018"

[dependencies]
color-backtrace = "0.1"
unicode-width = "0.1.5"
termion = {version = "1.5", optional = true }
tui = { version = "0.5.0", features = ["termion"] }

[features]
default = ["termion"]