[package]
name = "netchat"
version = "0.1.0"
authors = ["efugier <mail@emilienfugier.net>"]
edition = "2018"

[dependencies]
structopt = "0.2"
color-backtrace = "0.1"
unicode-width = "0.1.5"
termion = {version = "1.5", optional = true }
tui = { version = "0.5.0", features = ["termion"] }
log = "0.4"
env_logger = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.6.5"
shrinkwraprs = "0.2.1"
gag = "0.1.10"


# shrinkwraprs = { version = "0.2.1", features = ["derive"] }

[features]
default = ["termion"]
